Checkpoint: Quiz kinda working

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link href='//fonts.googleapis.com/css?family=Lato:400,700,300|Josefin+Sans:400,700|PT+Sans:400,700|Montserrat' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Lato:400,700,300|Josefin+Sans:400,700|PT+Sans:400,700|Montserrat|Lora:400,700' rel='stylesheet' type='text/css'>
     <link href='//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.css' rel='stylesheet' type='text/css'>
      
     <script src="/bower_components/jquery/dist/jquery.js"></script>
