More cleanup and misc changes

--- a/src/index.html
+++ b/src/index.html
@@ -48,9 +48,9 @@
   </div>
   <!-- End menu -->
 
-  <div ui-view></div>
+  <div ui-view autoscroll="false"></div>
 
-  <hr class="separator" />
+  <hr class="separator" style="margin-top: 150px;" />
 
   <footer id="footer">
     <div class="container">
