--- a/src/index.html
+++ b/src/index.html
@@ -7,21 +7,10 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-  <link href='//fonts.googleapis.com/css?family=Lato:400,700,300|Josefin+Sans:400,700|PT+Sans:400,700|Montserrat|Lora:400,700'
+  <link href='//fonts.googleapis.com/css?family=Lato:400,700,300|Josefin+Sans:400,700|Montserrat|Lora:400,700'
   rel='stylesheet' type='text/css'>
   <link href='//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.css' rel='stylesheet' type='text/css'>
 
-  <script src="/bower_components/jquery/dist/jquery.js"></script>
-  <script src="/bower_components/angular/angular.js"></script>
-  <script src="/bower_components/angular-animate/angular-animate.js"></script>
-  <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
-  <script src="/bower_components/angular-touch/angular-touch.js"></script>
-  <script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
-  <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-  <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-  <script src="/bower_components/lodash/lodash.js"></script>
-  <script src="/bower_components/angular-utils-pagination/dirPagination.js"></script>
-  <script src="/bower_components/ngScrollSpy/dist/ngScrollSpy.js"></script>
   <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
   <!-- bower:css -->
   <!-- run `gulp inject` to automatically populate bower styles dependencies -->
@@ -94,6 +83,16 @@
       </div>
     </div>
   </footer>
+  <script src="/bower_components/jquery/dist/jquery.js"></script>
+  <script src="/bower_components/angular/angular.js"></script>
+  <script src="/bower_components/angular-animate/angular-animate.js"></script>
+  <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
+  <script src="/bower_components/angular-touch/angular-touch.js"></script>
+  <script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
+  <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+  <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+  <script src="/bower_components/lodash/lodash.js"></script>
+  <script src="/bower_components/angular-utils-pagination/dirPagination.js"></script>
 
   <!-- build:js(src) scripts/vendor.js -->
   <!-- bower:js -->
@@ -111,7 +110,7 @@
   <!-- endinject -->
   <!-- endbuild -->
 
-
+  
 </body>
 
 </html>
